fix: WTF IS ALIGN-SELF: BASELINE

--- a/src/components/About Us Design/aboutus-design.scss
+++ b/src/components/About Us Design/aboutus-design.scss
@@ -120,7 +120,7 @@
             }
 
             &__logo {
-                margin: 5%;
+                align-self: baseline;
             }
         }
     }
